[package]
name = "chat"
version = "1.0.0"
authors = ["Luciano <lucianobenjaminpm@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#Setup
dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }
tokio = {version = "1", features = ["full"]}
#Routing
dioxus-router = { version = "0.4" }
# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
#State Managment
fermi = {git = "https://github.com/dioxuslabs/dioxus"}
futures-util = "0.3.28"
dioxus-hooks = "0.4.0"

